Environmental Model/jitfailure-dolfin_expression_160daff3d522bcfa064b8c0a8ee6626a/error.log
/tmp/tmpolbyawxy/dolfin_expression_160daff3d522bcfa064b8c0a8ee6626a.cpp: In member function ‘virtual void dolfin::dolfin_expression_160daff3d522bcfa064b8c0a8ee6626a::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpolbyawxy/dolfin_expression_160daff3d522bcfa064b8c0a8ee6626a.cpp:61:29: error: invalid operands of types ‘Eigen::DenseCoeffsBase<Eigen::Ref<const Eigen::Matrix<double, -1, 1> >, 0>::CoeffReturnType {aka double}’ and ‘double’ to binary ‘operator^’
           values[0] = 1-x[0]^2+0.23*x[1]^3;
                       ~~~~~~^~~~~~~~~~~~
/tmp/tmpolbyawxy/dolfin_expression_160daff3d522bcfa064b8c0a8ee6626a.cpp:61:24: warning: suggest parentheses around arithmetic in operand of ‘^’ [-Wparentheses]
           values[0] = 1-x[0]^2+0.23*x[1]^3;
                       ~^~~~~
